--- a/ecommerce_app/templates/base.html
+++ b/ecommerce_app/templates/base.html
@@ -148,7 +148,7 @@
     
             <div style="margin-left: 100px;height: 45px; border-radius: 15px;background-color: #f5f5f5;width: 600px;display: flex;justify-content: center;align-items: center;" class="input-group  ">
               <input style="height: 40px;border-color:#f5f5f5;background-color:#f5f5f5 ;border-radius: 15px; " type="text" class="form-control search-input" placeholder="Watchs" aria-label="Search">
-              <button style="border-radius: 15px; background-color: #ee4d2d; height: 45px; width: 85px; color: white;" class=" search-button" type="button">Search</button>
+              <button style="border-radius: 15px; background-color: #ee4d2d; height: 45px; width: 85px; color: white;margin-left: 5px" class=" search-button" type="button">Search</button>
             </div>
             
     
@@ -196,8 +196,8 @@
             <span class="ms-2"> Login </span>
         </button>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-            <li><a class="dropdown-item" href="/account/login_as_buyer/"><i class="bi bi-person"></i> Login</a></li>
-            <li><a class="dropdown-item" href="#"><i class="bi bi-cart"></i> Register<span class="icon-badge">9+</span></a></li>
+            <li><a class="dropdown-item" href="/account/login/?user_type=buyer"><i class="bi bi-person"></i> Login</a></li>
+            <li><a class="dropdown-item" href="/account/registration/?user_type=buyer"><i class="bi bi-cart"></i> Register<span class="icon-badge">9+</span></a></li>
             <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
             <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
         </ul>
@@ -236,9 +236,9 @@
 <footer class="footer">
   <div class="container text-center">
     <p>&copy; 2024 Kumo. All rights reserved.</p>
-    <a href="#" class="footer-link">Privacy Policy</a> | 
+    <a href="/about/" class="footer-link">About</a> | 
     <a href="#" class="footer-link">Terms of Service</a> | 
-    <a href="#" class="footer-link">Contact Us</a>
+    <a href="/contact/" class="footer-link">Contact Us</a>
   </div>
 </footer>
 
