--- a/product/template/product/edit_product.html
+++ b/product/template/product/edit_product.html
@@ -1,18 +1,11 @@
-{% extends 'base.html' %}
-
-
-{% block content %}
-   
-<h2>Edit Product</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
+<!DOCTYPE html>
+{% extends 'base.html' %} {% block content %}
+<div class="container">
+  <h2>Edit Product</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %} {{ form.as_p }}
     <button type="submit">Save Changes</button>
-</form>
-
-
-
-
+  </form>
+</div>
 
 {% endblock content %}
-    
